@@ -1,7 +1,7 @@
 Source: live-initrd-sidux
 Section: misc
 Priority: optional
-Maintainer: Kel Modderman <kelmo@kanotixguide.org>
+Maintainer: Kel Modderman <kel@otaku42.de>
 Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Build-Depends: cdbs, debhelper (>= 5)
 Standards-Version: 3.7.2
